# TgBot_vpn

./: QUICK_START.md  README.md  SETUP.md  main.py  pyproject.toml  requirements.txt  start_bot.py  validate_bot.py
bot/: main.py
bot/config/: settings.py
bot/handlers/: admin.py  main.py
bot/middlewares/: db.py
bot/utils/: helpers.py
locales/: ru.json  ru.py
