[project]
name = "tgbot-vpn"
version = "0.1.0"
description = "VPN Telegram Bot"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiogram==3.4.1",
    "sqlalchemy==2.0.23",
    "alembic==1.13.1",
    "python-dotenv==1.0.0",
    "qrcode==7.4.2",
    "pillow==10.1.0",
    "cryptography>=41.0.0",
    "aiofiles==23.2.1",
    "psycopg2-binary==2.9.9",
    "requests==2.31.0",
    "aiohttp==3.9.1",
    "schedule==1.2.0",
    "redis==5.0.1",
    "celery==5.3.4"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
